--- a/style.css
+++ b/style.css
@@ -58,11 +58,12 @@ pre {
 }
 code {
 	background-color: #eee;
-	border: 3px solid #aaa;
 	display: block;
 	font-family: monospace;
 	overflow-x: auto;
-	padding: 5px;
+	padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 	word-wrap: normal;
 }
 #menu td {
