--- a/templates/index.html/header.html
+++ b/templates/index.html/header.html
@@ -27,6 +27,7 @@
 				<a href="public.asc">PGP</a> |
 				<a href="atom.xml">Atom</a> |
 				<a href="rss.xml">RSS</a> |
+				<a href="http://cat.0xffff.me">Cat -V</a> |
 				<a href="mailto:${sitemail}">Mail</a>
 			</td>
 		</tr>
