--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 body {
 	background-color: #fff;
 	color: #000;
-	font-family: sans-serif;
+	font-family: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 	margin: 0;
 	padding: 1ex;
     line-height: 130%;
