--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 	font-family: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 	margin: 0;
 	padding: 1ex;
-    line-height: 130%;
+        line-height: 1.2;
 }
 /* HTML5 semantic tags: some (older) browsers display this inline by default */
 article, figcaption, figure, header, main, nav {
