--- a/templates/index.html/header.html
+++ b/templates/index.html/header.html
@@ -28,9 +28,9 @@
 				<a href="public.asc">pgp</a> |
 				<a href="atom.xml">atom</a> |
 				<a href="rss.xml">rss</a> |
-				<a href="https://0xffff.me">cat /dev/random</a> |
-				<a href="https://cn.0xffff.me">中文</a> |
-				<a href="mailto:${sitemail}">mail</a> |
+				<a href="http://0xffff.me">cat /dev/random</a> |
+				<a href="https://me.0xffff.me">English</a> |
+				<a href="mailto:${sitemail}">mail</a>
 				<a href="#" onclick="toggleTheme('light')">☀️</a> |
 				<a href="#" onclick="toggleTheme('dark')">🌙</a>
 			</td>
