add  chinese link

--- a/templates/index.html/header.html
+++ b/templates/index.html/header.html
@@ -27,7 +27,8 @@
 				<a href="public.asc">pgp</a> |
 				<a href="atom.xml">atom</a> |
 				<a href="rss.xml">rss</a> |
-				<a href="http://0xffff.me">cat /dev/random</a> |
+				<a href="https://0xffff.me">cat /dev/random</a> |
+				<a href="https://cn.0xffff.me">中文</a> |
 				<a href="mailto:${sitemail}">mail</a>
 			</td>
 		</tr>
