--- a/templates/page/header.html
+++ b/templates/page/header.html
@@ -23,16 +23,17 @@
 			<td id="links" align="left">
 				<a href="index.html">git stash</a>
 			</td>
-			<td id="links-contact" align="right">
+                        <td id="links-contact" align="right">
 				<span class="hidden"> | </span>
 				<a href="public.asc">pgp</a> |
 				<a href="atom.xml">atom</a> |
 				<a href="rss.xml">rss</a> |
-				<a href="https://0xffff.me">cat /dev/random</a> |
-				<a href="https://cn.0xffff.me">中文</a> |
-				<a href="mailto:${sitemail}">mail</a> |
+				<a href="http://0xffff.me">cat /dev/random</a> |
+				<a href="https://me.0xffff.me">English</a> |
+				<a href="mailto:${sitemail}">mail</a>
 				<a href="#" onclick="toggleTheme('light')">☀️</a> |
 				<a href="#" onclick="toggleTheme('dark')">🌙</a>
+			</td>
 		</tr>
 		</table>
 	</nav>
