--- a/templates/index.html/header.html
+++ b/templates/index.html/header.html
@@ -14,6 +14,7 @@
 	<link rel="alternate" href="atom.xml" type="application/atom+xml" title="${sitetitle} Atom Feed" />
 	<link rel="alternate" href="atom_content.xml" type="application/atom+xml" title="${sitetitle} Atom Feed with content" />
 	<link rel="icon" href="/favicon.png" type="image/png" />
+	<script src="script.js"></script>
 </head>
 <body>
 	<nav id="menuwrap">
