--- a/templates/index.html/header.html
+++ b/templates/index.html/header.html
@@ -30,7 +30,9 @@
 				<a href="rss.xml">rss</a> |
 				<a href="https://0xffff.me">cat /dev/random</a> |
 				<a href="https://cn.0xffff.me">中文</a> |
-				<a href="mailto:${sitemail}">mail</a>
+				<a href="mailto:${sitemail}">mail</a> |
+				<button onclick="toggleTheme('light')">☀️</button> |
+				<button onclick="toggleTheme('dark')">🌙</button>
 			</td>
 		</tr>
 		</table>
