--- a/templates/index.html/header.html
+++ b/templates/index.html/header.html
@@ -31,8 +31,8 @@
 				<a href="https://0xffff.me">cat /dev/random</a> |
 				<a href="https://cn.0xffff.me">中文</a> |
 				<a href="mailto:${sitemail}">mail</a> |
-				<button onclick="toggleTheme('light')">☀️</button> |
-				<button onclick="toggleTheme('dark')">🌙</button>
+				<a href="javascript:toggleTheme('light')">☀️</a> |
+				<a href="javascript:toggleTheme('dark')">🌙</a>
 			</td>
 		</tr>
 		</table>
