--- a/templates/page/header.html
+++ b/templates/page/header.html
@@ -31,8 +31,8 @@
 				<a href="https://0xffff.me">cat /dev/random</a> |
 				<a href="https://cn.0xffff.me">中文</a> |
 				<a href="mailto:${sitemail}">mail</a> |
-				<a href="javascript:toggleTheme('light')">☀️</a> |
-				<a href="javascript:toggleTheme('dark')">🌙</a>
+				<a href="#" onclick="toggleTheme('light')">☀️</a> |
+				<a href="#" onclick="toggleTheme('dark')">🌙</a>
 		</tr>
 		</table>
 	</nav>
