--- a/templates/page/header.html
+++ b/templates/page/header.html
@@ -29,7 +29,7 @@
 				<a href="atom.xml">atom</a> |
 				<a href="rss.xml">rss</a> |
 				<a href="http://0xffff.me">cat /dev/random</a> |
-				<a href="https://me.0xffff.me">English</a> |
+				<a href="https://me.0xffff.me">english</a> |
 				<a href="mailto:${sitemail}">mail</a>
 				<a href="#" onclick="toggleTheme('light')">☀️</a> |
 				<a href="#" onclick="toggleTheme('dark')">🌙</a>
